# pbix-dictionary-compression

./: .gitignore  CMakeLists.txt  Huffman.cpp  README.md  column_data_dictionary.cpp  column_data_dictionary.h  dictionary.ksy  main.cpp  main_start.c__
data/: 14.Reseller (5597).Reseller (5603).dictionary  15.Sales Order (561).Sales Order (566).dictionary  AAA_BBB_C_D_E.dictionary  AAA_B_C_D_E.dictionary  ResellerKey.dictionary  Reseller_Uno.dictionary  Sales Order Line.dictionary
include/: Huffman.h  column_data_dictionary.h
